# UV-Sky-Simulations

./: .gitignore  C:\Users\Akshank Tyagi\Documents\GitHub\UV-Sky-Simulations\\init_parameter.txt  Coordinates.py  Params_configparser.py  README.md  Satellite_configparser.py  Solar_system.py  create_csv_files.py  desktop.ini  diffuse_scattering.py  diffused_Background.py  dust_scatter.py  exclude_stars_10000.txt  exclude_stars_final.txt  excluded_stars_4929.txt  init_parameter.txt  kext_albedo_WD_MW_3.1_60_D03.all.txt  plot.py  read_dust_files.py  star_data.py  star_spectrum.py  tempCodeRunnerFile.py  tempCodeRunnerFile.python  view_orbit.py
__MACOSX/: ._src
__MACOSX/src/: ._coordinates.c  ._dSFMT.c  ._dSFMT.h  ._diffuse_model.c  ._diffuse_model.c.save  ._diffuse_model.h  ._read_files.c  ._scatter_math.c  ._star_programs.c  ._star_programs.c.save
cads_sky_model-1.0/: AUTHORS.txt  COPYING.txt  ChangeLog.txt  Makefile.am  Makefile.in  README.txt  configure  configure.ac
cads_sky_model-1.0/data/diffuse_data/: bkgd_spectrum.txt  fuv_allsky.txt  nuv_allsky.txt
cads_sky_model-1.0/data/sample_filters/: galex_FUV.txt  galex_NUV.txt  uvit_FUVBAF2.txt  uvit_NUVN2.txt
cads_sky_model-1.0/data/stellar_data/: castelli_files.mk
cads_sky_model-1.0/data/zodiacal_data/: leinert_dist.txt  zodiacal_spec.txt
cads_sky_model-1.0/doc/: Makefile.am  Makefile.in  skymodel_manual.tex
cads_sky_model-1.0/src/: Makefile.am  Makefile.in  calculations.c  coordinates.c  gal_bkgd.c  parse_par.c  parse_par.h  read_write.c  sky_model.c  sky_model.h  stars.c  zodiacal_programs.c
cads_stellar_spectrum-1.0/: AUTHORS.txt  ChangeLog.txt  Makefile.am  Makefile.in  README.txt  configure  configure.ac
cads_stellar_spectrum-1.0/spectral_data/: kurucz_files.mk  spdata_files.mk
cads_stellar_spectrum-1.0/spectral_data/MKSpDATA/: MKSpType1000.in  MKSpType10000.in  MKSpType1050.in  MKSpType1100.in  MKSpType1150.in  MKSpType1200.in  MKSpType1250.in  MKSpType1300.in  MKSpType1350.in  MKSpType1400.in  MKSpType1450.in  MKSpType1500.in  MKSpType1550.in  MKSpType1600.in  MKSpType1650.in  MKSpType1700.in  MKSpType1750.in  MKSpType1800.in  MKSpType1850.in  MKSpType1900.in  MKSpType1950.in  MKSpType2000.in  MKSpType2050.in  MKSpType2100.in  MKSpType2150.in  MKSpType2200.in  MKSpType2250.in  MKSpType2300.in  MKSpType2350.in  MKSpType2400.in  MKSpType2450.in  MKSpType2500.in  MKSpType2550.in  MKSpType2600.in  MKSpType2650.in  MKSpType2700.in  MKSpType2750.in  MKSpType2800.in  MKSpType2850.in  MKSpType2900.in  (+143 more)
cads_stellar_spectrum-1.0/src/: Makefile.am  Makefile.in  getopt.c  kurucz.c  read_write.c  signal_handler.c  stellar_spectrum.c  stellar_spectrum.h
cads_zodiacal_model-1.0/: AUTHORS.txt  COPYING.txt  ChangeLog.txt  Makefile.am  Makefile.in  README.txt  config.h.in  configure  configure.ac
cads_zodiacal_model-1.0/src/: Makefile.am  Makefile.in  read_write.c  zodiacal_model.c  zodiacal_model.h
diffused_data/: Allstars_flux_data[1100,1110]_mag20.csv  Allstars_flux_data[1100.0,1110.0].csv  Sorted_star_list[1100,1110]_mag20.csv  Sorted_star_list[1100.0,1110.0].csv  Weighted_list[1100,1110]_mag20.csv  Weighted_list[1100.0,1110.0].csv
green_dust_60/: green_dust_60.fits
green_dust_60_col/: green_cum_tau_60.fits
src/: coordinates.c  dSFMT.h  diffuse_model.c  diffuse_model.c.save  diffuse_model.h  init_parameter.txt  read_files.c  scatter_math.c  star_programs.c  star_programs.c.save
